--- a/_theme_files/index.html
+++ b/_theme_files/index.html
@@ -15,7 +15,7 @@
     <title>Property Pulse | Find local rental properties</title>
   </head>
   <body>
-    <nav class="bg-blue-700 border-b border-blue-500">
+    <!-- <nav class="bg-blue-700 border-b border-blue-500">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-20 items-center justify-between">
           <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
@@ -213,7 +213,7 @@
           </button>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- Hero -->
     <section class="bg-blue-700 py-20 mb-4">
